k8s/k8s-config/car-serv/services/car-serv-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: car-serv-service
  namespace: car-serv-ns
spec:
  ports:
    - name: tcp
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: car-serv-deployment
  type: ClusterIP
