k8s/k8s-config/car-serv/services/nodePort.yaml
apiVersion: v1
kind: Service
metadata:
  name: car-serv-service
  namespace: car-serv-ns
spec:
  ports:
    - name: tcp
      nodePort: 32080
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: car-serv-deployment
  type: NodePort
